--- a/wap/tmpl/product_second_categroy.html
+++ b/wap/tmpl/product_second_categroy.html
@@ -27,6 +27,14 @@
 					<%=class_list[i].gc_name%>
 					<span class="graydownarrow"></span>
 				</div>
+				<ul class="categroy-third-list">
+						<li><a href="javascript:void(0);" class="product_list" gc_id="<%=gc_id %>">全部商品</a>
+					<%for(i=0;i<class_list.length;i++){%>
+						<li>
+							<a href="javascript:void(0);" class="product_list" gc_id="<%=class_list[i].gc_id%>"><%=class_list[i].gc_name%></a>
+						</li>	
+					<%}%>
+				</ul>
 			</li>
 			<%}%>
 		</ul>
@@ -34,12 +42,14 @@
 </script>
 
 <script type="text/html" id="category3">
-	<ul class="categroy-third-list">
+	<!-- <ul class="categroy-third-list">
 			<li><a href="javascript:void(0);" class="product_list" gc_id="<%=gc_id %>">全部商品</a>
 		<%for(i=0;i<class_list.length;i++){%>
-			<li><a href="javascript:void(0);" class="product_list" gc_id="<%=class_list[i].gc_id%>"><%=class_list[i].gc_name%></a></li>	
+			<li>
+				<a href="javascript:void(0);" class="product_list" gc_id="<%=class_list[i].gc_id%>"><%=class_list[i].gc_name%></a>
+			</li>	
 		<%}%>
-	</ul>
+	</ul> -->
 </script>
 <script type="text/javascript" src="../js/jquery.min.js"></script> 
 <script type="text/javascript" src="../js/zepto.min.js"></script>
