--- a/wap/index.html
+++ b/wap/index.html
@@ -11,6 +11,18 @@
 <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link rel="stylesheet" type="text/css" href="css/index.css">
+<style type="text/css">
+	.index_features{
+		width: 100%;
+	}
+	.index_features li{
+		float: left;
+		width: 25%;
+	}
+	.index_features li a img{
+		width: 90%;
+	}
+</style>
 </head>
 <body>
 <header class="main">
@@ -49,6 +61,35 @@
 			</div>
 		</div>
 	</div>
+</script>
+<script type="text/html" id="home1">
+	<div class="index_block home1">
+	<ul class="index_features">
+		<li>
+			<a href="http://quanyougo.com/wap/tmpl/product_first_categroy.html">
+				<img src="http://quanyougo.com/data/upload/mobile/special/s0/s0_05073163404053144.png">
+				<p>分类</p>
+			</a>
+		</li>
+		<li>
+			<a href="http://quanyougo.com/wap/tmpl/go_store.html?store_id=1">
+				<img src="http://quanyougo.com/data/upload/mobile/special/s0/s0_05073164000016371.png">
+				<p>自营店</p>
+			</div>
+		</li>
+		<li>
+			<a href="http://quanyougo.com/shop/index.php?act=search&op=index&cate_id=1044">
+				<img src="http://quanyougo.com/data/upload/mobile/special/s0/s0_05073165752379906.png">
+				<p>分类</p>
+			</a>
+		</li>
+		<li>
+			<a href="http://quanyougo.com/wap/tmpl/member/member.html?act=member">
+				<img src="http://quanyougo.com/data/upload/mobile/special/s0/s0_05073167357294970.png">
+				<p>积分</p>
+			</a>
+		</li>
+	</ul>
 </script>
 <script type="text/html" id="home2">
 	<div class="index_block home2">
