--- a/wap/index.html
+++ b/wap/index.html
@@ -33,8 +33,7 @@
 		</div>
 	</div>
 </header>
-<div class="main" id="main-container"></div>
-
+<div class="main" id="main-container">
 
 	<div class="index_block home0">
 		<ul class="index_features">
@@ -63,7 +62,7 @@
 				</a>
 			</li>
 		</ul>
-	</div>
+	</div></div>
 <footer id="footer"></footer>
 <script type="text/html" id="adv_list">
 	<div class="adv_list">
