--- a/wap/index.html
+++ b/wap/index.html
@@ -17,10 +17,17 @@
 	}
 	.index_features li{
 		float: left;
-		width: 25%;
+		width: 15%;
+		margin-right: 10%;
+	}
+	.index_features li:last-child{
+		margin-right: 0;
 	}
 	.index_features li a img{
 		width: 90%;
+	}
+	.index_features li a p{
+		text-align: center;
 	}
 </style>
 </head>
