--- a/wap/index.html
+++ b/wap/index.html
@@ -14,11 +14,12 @@
 <style type="text/css">
 	.index_features{
 		width: 100%;
+		padding: 20px 0;
 	}
 	.index_features li{
 		float: left;
 		width: 15%;
-		margin-right: 10%;
+		margin:0 5%;
 	}
 	.index_features li:last-child{
 		margin-right: 0;
@@ -28,6 +29,8 @@
 	}
 	.index_features li a p{
 		text-align: center;
+		color: #051B28;
+		font-family: Microsoft Yahei;
 	}
 </style>
 </head>
@@ -110,7 +113,7 @@
 			<li>
 				<a href="http://quanyougo.com/shop/index.php?act=search&op=index&cate_id=1044">
 					<img src="http://quanyougo.com/data/upload/mobile/special/s0/s0_05073165752379906.png">
-					<p>分类</p>
+					<p>充值</p>
 				</a>
 			</li>
 			<li>
