--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -268,7 +268,7 @@
 								</span>
 							</div>
 						</li>
-						<li class="bd-tdashed-dd" style="position: fixed;bottom: 0px;">
+						<li class="bd-tdashed-dd" style="position: fixed;bottom: 30px;background: black;">
 							<div class="opera-product-wp">
 							<% if (goods_info.is_virtual == '1') { %>
 								<div class="opera-pd-item buy-now">立即购买</div>
