--- a/wap/tmpl/product_list.html
+++ b/wap/tmpl/product_list.html
@@ -63,7 +63,7 @@
 						<img src="<%=goods_list[i].goods_image_url;%>"/>
 					</span>
 					<div class="pdlist-iw-cnt">
-						<p class="pdlist-iwc-pdname">
+						<p class="pdlist-iwc-pdname" style="font-size: 0.8em;color: #434343;">
 							<%=goods_list[i].goods_name;%>
 						</p>
 						<p class="pdlist-iwc-pdprice">
