--- a/wap/tmpl/product_list.html
+++ b/wap/tmpl/product_list.html
@@ -107,7 +107,7 @@
 								} }
 							%>
 							</span>
-							<span class="fleft">
+							<span class="fleft" style="font-size: 12px;margin-top: -4px;">
 								(<%=goods_list[i].evaluation_count;%>人)
 							</span>
 						</p>
