--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -111,7 +111,7 @@
 						<img src="<%=goods_list[i].goods_image_url;%>"/>
 					</span>
 					<div class="pdlist-iw-cnt">
-						<p class="pdlist-iwc-pdname">
+						<p class="pdlist-iwc-pdname" style="font-size: 0.8em;color: #434343;">
 							<%=goods_list[i].goods_name;%>
 						</p>
 						<p class="pdlist-iwc-pdprice">
@@ -139,7 +139,7 @@
 								}
 							%>
 							</span>
-							<span class="fleft">
+							<span class="fleft" style="font-size: 12px;">
 								(<%=goods_list[i].evaluation_count;%>人)
 							</span>
 						</p>
