--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -22,6 +22,7 @@
 			</div>
 		</div>
 	</div>
+	<!-- <img src="<?php echo getStoreLogo($output['store_info']['store_label'],'store_logo');?>"/> -->
 	<div class="store_header"></div>
 	<div id="product_detail_wp"></div>
 	<div class="content">
