--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -280,7 +280,7 @@
 								<div class="opera-pd-item buy-now">F码购买</div>
 							<% } else { %>
 								<img src="../images/kefu_03.png" style="padding:0 10px 0 0;">
-								<a href="go_store.html?store_id=<%=goods_info.store_id%>"><img src="../images/jindian2_02.png" style="padding:0 5px;  border:0 none;"></a>
+								<a href="go_store.html?store_id=<%=goods_info.store_id%>"><img src="../images/jindian2_02.png" style="padding:0 5px;  border:none;"></a>
 								<img src="../images/shoucang_03.png" style="padding:0 10px ;">		
 								<div class="opera-pd-item buy-now ">立即购买</div>
 								<%if(goods_info.promotion_type!='groupbuy'){%>
