--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -68,7 +68,7 @@
 	</div>
 	<script type="text/html" id="go_store"> 
 		<div class="m_store_bg"></div>
-		<img src="<%=store_info.store_label%>" width="100%" height="40px">
+		// <img src="<%=store_info.store_label%>" width="100%" height="40px">
 		<div class="ncs-info">
 		<div class="title">
 			<h4><%=store_info.store_name%></h4>
