--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -68,7 +68,7 @@
 	</div>
 	<script type="text/html" id="go_store"> 
 		<div class="m_store_bg"></div>
-		
+		<image src="../../data/upload/shop/common/quanyougo.jpg" width="100%" height="100px"/>
 		<div class="ncs-info">
 		<div class="title">
 			<h4><%=store_info.store_name%></h4>
@@ -93,8 +93,6 @@
 		      </dd>
 		    </dl>
 			<%} %>
-
-		    <?php } ?>
 
 		    <dl class="no-border">
 		      <dt>公司名称：</dt>
