--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -57,6 +57,9 @@
 				<a href="javascript:void(0);" class="next-page ">下一页</a>
 			</div>
 		</div>
+		<li class="bd-tdashed-dd" style="position: fixed;bottom: 0px; padding-top:0px; height:4%;">
+			<li><h2>宝贝分类</h2></li>  <li><h2>店铺简介</h2></li>  <li><h2>联系卖家</h2></li>     
+		</li>
 	</div>
 	<input type="hidden" name="key" value="4">
 	<input type="hidden" name="order" value="1">
@@ -65,7 +68,7 @@
 	<input type="hidden" name="hasmore">
 	<input type="hidden" name="store_id" value="">
 	<input type="hidden" name="keyword">
-	<footer id="footer"></footer>
+	<!-- <footer id="footer"></footer> -->
 	</div>
 	<script type="text/html" id="go_store"> 
 		<div class="m_store_bg"></div>
@@ -148,6 +151,7 @@
 								(<%=goods_list[i].evaluation_count;%>人)
 							</span>
 						</p>
+
 					</div>
 				</a>
 			</li>
