--- a/wap/index.html
+++ b/wap/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>首页</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="format-detection" content="telephone=no">
@@ -20,6 +20,7 @@
 		width: 15%;
 		margin:20px 5%;
 	}
+	
 	.index_features li:last-child{
 		margin-right: 0;
 	}
@@ -35,10 +36,12 @@
 </head>
 <body>
 <header class="main">
+	
 	<div class="header-wrap">
-		<div class="htsearch-wrap with-home-logo">
-			<input type="text" class="htsearch-input clr-999" value="" id="keyword" placeholder="搜索商品"/>
-			<a href="javascript:void(0);" class="search-btn"></a>
+		<div class="htsearch-wrap with-home-logo" style="width:100%; height:50px; padding-right">
+        	
+			<input type="text"  value="" id="keyword" placeholder="搜索商品" style="width:68%; padding:1% 1%;;border:1px #C0C0C0 solid; float:left; margin-top:1%;"/>
+			<a href="javascript:void(0);"><img src="./images/sousuo.png" style=" width:4%; float:left; margin-left:1.5%; margin-top:1.5%;"/></a>
 		</div>
 	</div>
 </header>
