--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -27,6 +27,7 @@
 
 	<div class="store_header"></div>
 	<div id="product_detail_wp"></div>
+	<!-- 轮播图  放什么图 怎么获取 -->
 	<div class="content">
 		<div class="product-filter">
 			<a href="javascript:void(0);" class="clearfix current keyorder" key="4">
@@ -57,9 +58,11 @@
 				<a href="javascript:void(0);" class="next-page ">下一页</a>
 			</div>
 		</div>
-		<li class="bd-tdashed-dd" style="position: fixed;bottom: 0px; padding-top:0px; height:4%;">
-			<li><h2>宝贝分类</h2></li>  <li><h2>店铺简介</h2></li>  <li><h2>联系卖家</h2></li>     
-		</li>
+		<ul class="bd-tdashed-dd" style="position: fixed;bottom: 0px; padding-top:0px; height:5%; border-top:1px solid #aaaaaa;">
+			<li style="float:left; padding:10px 6%; width:20%; text-align:center; border-right:1px solid #aaaaaa; font-size:20px; font-family:SimHei; "><a href="product_first_categroy.html" style="color:#000;">宝贝分类</a></li>
+			<li style="float:left; padding:10px 6%;  width:20%; text-align:center; border-right:1px solid #aaaaaa; font-size:20px; font-family:SimHei;"><a href="product_first_categroy.html" style="color:#000;">店铺简介</a></li>
+			<li style="float:left; padding:10px 6%;  width:20%; text-align:center; font-size:20px; font-family:SimHei;">联系卖家</li>
+		</ul>
 	</div>
 	<input type="hidden" name="key" value="4">
 	<input type="hidden" name="order" value="1">
