--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -240,9 +240,9 @@
 							<% } else if (goods_info.is_fcode == '1') { %>
 								<div class="opera-pd-item buy-now">F码购买</div>
 							<% } else { %>
-								<img src="../images/kefu_03.png" style="padding:0 3px 3px 0; ">
-								<a href="go_store.html?store_id=<%=goods_info.store_id%>"><img src="../images/dianpu.png" style=" padding-left:1px; border:none;"></a>
-								<img src="../images/shoucang.png"  style="  border:none;">
+								<img src="../images/kefu_03.png" style="padding:0 3px 3px 0; height:30px;">
+								<a href="go_store.html?store_id=<%=goods_info.store_id%>"><img src="../images/dianpu.png" style=" padding-left:1px; border:none; height:30px;"></a>
+								<img src="../images/shoucang.png"  style="  border:none; height:30px;">
 								<div class="opera-pd-item buy-now ">立即购买</div>
 
 								<%if(goods_info.promotion_type!='groupbuy'){%>
