--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
 	<link rel="stylesheet" type="text/css" href="../css/child.css">
 </head>
-<body>
+<body >
 	<div class="search">
 		<div class="header-wrap">
 			<div class="htsearch-wrap">
@@ -25,10 +25,10 @@
 	</div>
 
 
-	<div class="store_header"></div>
+	<div class="store_header" ></div>
 	<div id="product_detail_wp"></div>
 	<!-- 轮播图  放什么图 怎么获取 -->
-	<div class="content">
+	<div class="content"  style="margin-bottom:8%;">
 		<div class="product-filter">
 			<a href="javascript:void(0);" class="clearfix current keyorder" key="4">
 				<span class="pf-newpd-icon f-icon fleft"></span>
@@ -48,7 +48,7 @@
 				<span class="pf-title">人气</span>
 			</a>
 		</div>
-		<div class="product-cnt">
+		<div class="product-cnt" style="margin-bottom：10%;">
 			<div id="product_list"></div>
 			<div class="pagination mt10">
 				<a href="javascript:void(0);" class="pre-page disabled">上一页</a>
@@ -58,12 +58,14 @@
 				<a href="javascript:void(0);" class="next-page ">下一页</a>
 			</div>
 		</div>
-		<ul class="bd-tdashed-dd" style="position: fixed;bottom: 0px; padding-top:0px; height:6%; border-top:1px solid #aaaaaa;">
+
+		
+	</div>
+	<ul class="bd-tdashed-dd" style="position: fixed;bottom: 0px; padding-top:0px; height:6%; border-top:1px solid #aaaaaa; opera-product-wp appcan.window.resizePopoverByEle:content,0,titHeight,content;">
 			<li style="float:left; padding:10px 6%; width:20%; text-align:center; border-right:1px solid #aaaaaa; font-size:15px; font-family:SimHei; "><a href="product_first_categroy.html" style="color:#000;">宝贝分类</a></li>
 			<li style="float:left; padding:10px 6%;  width:20%; text-align:center; border-right:1px solid #aaaaaa; font-size:15px; font-family:SimHei;"><a href="product_first_categroy.html" style="color:#000;">店铺简介</a></li>
 			<li style="float:left; padding:10px 6%;  width:20%; text-align:center; font-size:15px; font-family:SimHei;">联系卖家</li>
-		</ul>
-	</div>
+	</ul>
 	<input type="hidden" name="key" value="4">
 	<input type="hidden" name="order" value="1">
 	<input type="hidden" name="page" value="10">
@@ -113,7 +115,7 @@
 		</div>
 	</script>
 <script type="text/html" id="home_body">
-	<% if(goods_list.length >0){%>	
+	<% if(goods_list.length >0){%>
 		<ul class="product-list">
 			<%for(i=0;i<goods_list.length;i++){%>
 			<li class="pdlist-item" goods_id="<%=goods_list[i].goods_id;%>">
