--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -15,12 +15,11 @@
 	<link rel="stylesheet" type="text/css" href="../css/child.css">
 </head>
 <body >
-	<div class="search">
-		<div class="header-wrap">
-			<div class="htsearch-wrap">
-				<input type="text" class="htsearch-input clr-999" value="" id="keyword" placeholder="搜索全站商品"/>
-				<a href="javascript:void(0);" class="search-btn"></a>
-			</div>
+	<div class="header-wrap">
+		<div>
+        	<a href="javascript:void(0);"><img src="../images/fanhui.png" style=" width:4%; float:left; margin-left:1.5%; margin-top:1.5%;"/></a>
+			<input type="text"  value="" id="keyword" placeholder="搜索商品" style="width:76%; padding:1% 5%;;border:1px #C0C0C0 solid; float:left; margin-top:1%;"/>
+			<a href="javascript:void(0);"><img src="../images/sousuo.png" style=" width:4%; float:left; margin-left:1.5%; margin-top:1.5%;"/></a>
 		</div>
 	</div>
 
