--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -17,7 +17,7 @@
 <body >
 	<div class="header-wrap">
 		<div>
-        	<a href="javascript:void(0);"><img src="../images/fanhui.png" style=" width:4%; float:left; margin-left:1.5%; margin-top:1.5%;"/></a>
+        	<a href="javascript:history.back();"><img src="../images/ff.png" style="height:20px; width:4%; float:left; margin-left:1.5%; margin-top:1.5%;"/></a>
 			<input type="text"  value="" id="keyword" placeholder="搜索商品" style="width:76%; padding:1% 5%;;border:1px #C0C0C0 solid; float:left; margin-top:1%;"/>
 			<a href="javascript:void(0);"><img src="../images/sousuo.png" style=" width:4%; float:left; margin-left:1.5%; margin-top:1.5%;"/></a>
 		</div>
@@ -114,6 +114,7 @@
 		</div>
 	</script>
 <script type="text/html" id="home_body">
+    
 	<% if(goods_list.length >0){%>
 		<ul class="product-list">
 			<%for(i=0;i<goods_list.length;i++){%>
