--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -18,7 +18,7 @@
 	<div class="header-wrap">
 		<div>
         	<a href="javascript:history.back();"><img src="../images/ff.png" style="height:20px; width:4%; float:left; margin-left:1.5%; margin-top:1.5%; padding-right:3%;"/></a>
-			<input type="text"  value="" id="keyword" placeholder="搜索商品" style="width:73%; padding:1% 5%;;border:1px #C0C0C0 solid; float:left; margin-top:1%;"/>
+			<input type="text"  value="" id="keyword" placeholder="搜索商品" style="width:73%; padding:1.5% 5%; border:1px #C0C0C0 solid; float:left; margin-top:1%;"/>
 			<a href="javascript:void(0);"><img src="../images/sousuo.png" style=" width:4%; float:left; margin-left:1.5%; margin-top:2%;"/></a>
 		</div>
 	</div>
