--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/child.css">
+	<script type="text/javascript">
+	      document.ontouchmove = function(e){ e.preventDefault(); };
+	</script>
 	<style type="text/css">
 	   a:focus { outline: 0; }
 	</style>
