--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -18,7 +18,7 @@
 	   a:focus { outline: 0; }
 	</style>
 </head>
-<body>
+<body style="width:100%;">
 	<header id="header"></header>
 	<div id="product_detail_wp"></div>
 	
