--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -16,7 +16,7 @@
 	   a:focus { outline: 0; }
 	</style>
 </head>
-<body style="width:100%;">
+<body>
 	<header id="header"></header>
 	<div id="product_detail_wp"></div>
 	
