--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<title>商品详情</title>
+	<title>商品详情123</title>
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="format-detection" content="telephone=no">
@@ -20,16 +20,10 @@
 ｝
 	   img {
 			   
-			}
-		img	.transparent{
-
 			border:0px;
-						filter:alpha(opacity=0);
-						-moz-opacity:0.5;
-						-khtml-opacity: 0.5;
-						opacity: 0.5;
-						}
-
+			}
+	
+						
 	</style>
 </head>
 <body style="resize: none;">
