--- a/wap/tmpl/member/register.html
+++ b/wap/tmpl/member/register.html
@@ -17,7 +17,7 @@
     <div class="login-form">
         <form action="" method ="">
             <span>
-                <input type="text" placeholder="用户名" class="input-40" name="username" id="username"/>
+                <input type="text" placeholder="手机号" class="input-40" name="user_name" id="user_name"/>
             </span>
             <span>
                 <input type="password" placeholder="密码" class="input-40" name="pwd" id="userpwd"/>
@@ -27,7 +27,7 @@
             </span>
             <span>
                 <input type="text" placeholder="邮件" class="input-40" name="email" id="email"/>
-            </span>           
+            </span>        
             <input type="hidden" name="client" value="wap">
             <!-- <span class="clearfix auto-login">
                 <i class="s-chk1 fleft mr5"></i>
@@ -49,3 +49,4 @@
 	<script type="text/javascript" src="../../js/tmpl/footer.js"></script>
 </body>
 </html>
+
