--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -237,7 +237,7 @@
 								</span>
 							</div>
 						</li>
-						<div width="500px">
+						<div>
 					        <div class="pddetail-cnt">
 					            <div class="pd-detail-tab">
 					                <div  id="fixed-tab-pannel">
