--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -237,7 +237,7 @@
 								</span>
 							</div>
 						</li>
-						<div>
+						<div class="content">
 					        <div class="pddetail-cnt">
 					            <div class="pd-detail-tab">
 					                <div  id="fixed-tab-pannel">
