--- a/wap/tmpl/member/register.html
+++ b/wap/tmpl/member/register.html
@@ -26,8 +26,11 @@
                 <input type="password" placeholder="确认密码" class="input-40" name="password_confirm" id="password_confirm"/>
             </span>
             <span>
+                <input type="text" placeholder="验证码" class="input-40" name="code" id="code"/><span id="getVeri"> 获取验证码</span>
+            </span> 
+           <!--  <span>
                 <input type="text" placeholder="邮件" class="input-40" name="email" id="email"/>
-            </span>        
+            </span>      -->   
             <input type="hidden" name="client" value="wap">
             <!-- <span class="clearfix auto-login">
                 <i class="s-chk1 fleft mr5"></i>
@@ -50,3 +53,60 @@
 </body>
 </html>
 
+<script>
+$(document).ready(function(){
+  
+var test = {
+       node:null,
+       count:60,
+       start:function(){
+          //console.log(this.count);
+          if(this.count > 0){
+             this.node.innerHTML = this.count--;
+             var _this = this;
+             setTimeout(function(){
+                _this.start();
+             },1000);
+          }else{
+             this.node.removeAttribute("disabled");
+             this.node.innerHTML = "再次发送";
+             this.count = 60;
+          }
+       },
+       //初始化
+       init:function(node){
+          this.node = node;
+          this.node.setAttribute("disabled",true);
+          this.start();
+       }
+    };
+    var btn = document.getElementById("getVeri");
+    btn.onclick = function(){
+        if(!(/^1[34578]\d{9}$/.test($("#user_name").val())))
+        {
+            alert("请输入正确的手机号");
+        }
+        else
+        {
+            alert("验证信息会发送到"+$("#user_name").val());
+            test.init(btn);
+            // alert(data);
+            var phone=$("#user_name").val();
+            //alert(phone);
+            $.ajax({
+                     type : "POST",
+                     url : "../../../mobile/index.php?act=login&op=sendnote",
+                     data :  { phone: phone } ,
+                     // success : function(data) {
+                     //    alert(data);
+                     // },  
+                     
+                    });
+        }
+        
+    };
+  });
+
+  
+
+</script>
