--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/child.css">
+	<link rel="stylesheet" type="text/css" href="../../chat/templates/default/cate.css">
 	
 	<style type="text/css">
 	   a:focus { outline: 0; }
@@ -308,8 +309,8 @@
     <script type="text/javascript" src="../js/common.js"></script>
     <script type="text/javascript" src="../js/tmpl/common-top.js"></script>
     <script type="text/javascript" src="../js/tmpl/product_info.js"></script>
-    <script type="text/javascript" src="../../../chat/resoure/js/store.js"></script>
-    <script type="text/javascript" src="../../../chat/resoure/js/user.js"></script>
-    <script type="text/javascript" src="../../../chat/templates/default/cate.css"></script>
+    <script type="text/javascript" src="../../chat/resource/js/store.js"></script>
+    <script type="text/javascript" src="../../chat/resource/js/user.js"></script>
+    
 </body>
 </html>
