--- a/wap/tmpl/member/register.html
+++ b/wap/tmpl/member/register.html
@@ -31,7 +31,7 @@
            <!--  <span>
                 <input type="text" placeholder="邮件" class="input-40" name="email" id="email"/>
             </span>      -->   
-            <input type="hidden" name="client" value="wap">
+            <input type="hidden" name="client" id="client" value="wap">
             <!-- <span class="clearfix auto-login">
                 <i class="s-chk1 fleft mr5"></i>
                 <span>7天内免登录</span>
