--- a/wap/index.html
+++ b/wap/index.html
@@ -37,9 +37,9 @@
 <body>
 <header class="main">	
 	<div class="header-wrap">
-		<div class="htsearch-wrap with-home-logo" style="width:90%; height:50px; padding-right">	
+		<div class="htsearch-wrap with-home-logo" style="width:80%; height:50px; padding-right; margin-top:2%;">	
 			<input type="text"  value="" id="keyword" placeholder="搜索商品" style="width:68%; padding:1% 1%;;border:1px #C0C0C0 solid; float:left; margin-top:1%;"/>
-			<a href="javascript:void(0);"><img src="./images/sousuo.png" style=" width:4%; float:left; margin-left:1.5%; margin-top:1.5%;"/></a>
+			<a href="javascript:void(0);"><img src="./images/sousuo.png" style=" width:4%; float:left; margin-left:1.5%; margin-top:3%;"/></a>
 		</div>
 	</div>
 </header>
