--- a/wap/tmpl/product_detail.html
+++ b/wap/tmpl/product_detail.html
@@ -272,12 +272,12 @@
 				
 							<div class="cart-concern-btm-fixed four-column">
 				<div class="concern-cart">
-					<a class="cart-car-icn" href="product_store.html?store_id=<%=store_info.store_id%>">
+					<a class="cart-car-icn" href="go_store.html?store_id=<%=goods_info.store_id%>">
 						<em class="btm-store-icn">
 						</em>
 						<span>店铺</span>
 					</a>
-					<a class="cart-car-icn goods-favorites" href="javascript:void(0);">
+					<a id="pd-collects" class="cart-car-icn goods-favorites" href="javascript:void(0);">
 						<em class="btm-fav-icn">
 						</em>
 						<span>收藏</span>
@@ -318,14 +318,6 @@
 	<script type="text/javascript" src="../js/tmpl/common-top.js"></script>
 	<script type="text/javascript" src="../js/tmpl/footer.js"></script>
 	<script type="text/javascript" src="../js/tmpl/product_detail.js"></script>
-
-
-
-    <script type="text/javascript" src="../js/jquery.min.js"></script>
-
-    <script type="text/javascript" src="../js/tmpl/product_info.js"></script>
-    <script type="text/javascript" src="../../chat/resource/js/store.js"></script>
-    <script type="text/javascript" src="../../chat/resource/js/user.js"></script>
     
 </body>
 </html>
