--- a/wap/tmpl/go_store.html
+++ b/wap/tmpl/go_store.html
@@ -61,11 +61,11 @@
 		</div>
 
 	</div>
-	<ul class="bd-tdashed-dd" style="position: fixed;bottom: 0px; padding-top:0px; height:7%; border-top:1px solid #aaaaaa; opera-product-wp appcan.window.resizePopoverByEle:content,0,titHeight,content;">
+	<!-- <ul class="bd-tdashed-dd" style="position: fixed;bottom: 0px; padding-top:0px; height:7%; border-top:1px solid #aaaaaa; opera-product-wp appcan.window.resizePopoverByEle:content,0,titHeight,content;">
 			<li style="float:left; padding:10px 6%; width:20%; text-align:center; border-right:1px solid #aaaaaa; font-size:15px; font-family:SimHei; "><a href="product_first_categroy.html" style="color:#000;">宝贝分类</a></li>
 			<li style="float:left; padding:10px 6%;  width:20%; text-align:center; border-right:1px solid #aaaaaa; font-size:15px; font-family:SimHei;"><a href="product_first_categroy.html" style="color:#000;">店铺简介</a></li>
 			<li style="float:left; padding:10px 6%;  width:20%; text-align:center; font-size:15px; font-family:SimHei;">联系卖家</li>
-	</ul>
+	</ul> -->
 	<input type="hidden" name="key" value="4">
 	<input type="hidden" name="order" value="1">
 	<input type="hidden" name="page" value="10">
